--- a/A-3/index.html
+++ b/A-3/index.html
@@ -74,7 +74,7 @@
                     <article class="con1">
                         <ul class="tabmenu">
                             <li class="on"><h2><a href="#">공지사항</a></h2>
-                                <div class="notice-tabcon">
+                                <div class="notice tabcon">
                                 <table>
                                     <tr>
                                         <th><a href="#" class="pp">[영월군시설관리공단] 2019년 문화가 있는 날 운영계획</a></th>
@@ -96,7 +96,7 @@
                             </div>
                         </li>
                         <li><h2><a href="#">갤러리</a></h2></li>
-                            <div class="gall-tabcon">
+                            <div class="gall tabcon">
                                 <ul>
                                     <li><a href="#"><img src="img/g1.jpg" alt="갤러리 후기1"></a></li>
                                     <li><a href="#"><img src="img/g2.jpg" alt="갤러리 후기2"></a></li>
