--- a/F-2/index.html
+++ b/F-2/index.html
@@ -9,6 +9,212 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-    
+    <div class="wrap">
+        <header>
+            <h1 class="logo"><a href="#"><img src="img/logo.png" alt="기능대학교"></a></h1>
+            <nav id="gnb">
+                <ul>
+                    <li><a href="#">교육/소개</a>
+                        <ul class="sub">
+                            <li><a href="#">대학</a></li>
+                            <li><a href="#">대학원</a></li>
+                            <li><a href="#">대학현황</a></li>
+                            <li><a href="#">대학상징</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">연구</a>
+                        <ul class="sub">
+                            <li><a href="#">연구성과</a></li>
+                            <li><a href="#">연구현황</a></li>
+                            <li><a href="#">연구기관</a></li>
+                            <li><a href="#">연구지원</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">입학</a>
+                        <ul class="sub">
+                            <li><a href="#">대학</a></li>
+                            <li><a href="#">대학원</a></li>
+                            <li><a href="#">편입학</a></li>
+                            <li><a href="#">글로벌</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">대학생활</a>
+                        <ul class="sub">
+                            <li><a href="#">뉴스</a></li>
+                            <li><a href="#">학생활동</a></li>
+                            <li><a href="#">캠퍼스생활</a></li>
+                            <li><a href="#">학사행정</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </header>
+        <section class="slide">
+            <ul>
+                <li class="s1">
+                    <a href="#">
+                        <h2><span>2023 신입생/편입생활</span>모집합니다.</h2>
+                    </a>
+                </li>
+                <li class="s2">
+                    <a href="#">
+                        <h2>2024-1학기 전공변경 신청 안내</h2>
+                    </a>
+                </li>
+                <li class="s3">
+                    <a href="#">
+                        <h2><span>기능대학교</span>한국언어중앙회, 교육협력 협약 체결</h2>
+                    </a>
+                </li>
+            </ul>
+        </section>
+        <div class="container">
+            <arricle class="link">
+                <ul>
+                    <li>
+                        <a href="#">
+                            <h2>
+                                <img src="img/batch_prediction.png" alt="기능 길라잡이">기능 길라잡이
+                            </h2>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h2>
+                                <img src="img/face_retouching_natural.png" alt="학생복지">학생복지
+                            </h2>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h2>
+                                <img src="img/person_search.png" alt="교내연락처">교내연락처
+                            </h2>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h2>
+                                <img src="img/folder_shared.png" alt="학생증발급">학생증발급
+                            </h2>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <h2>
+                                <img src="img/account_balance.png" alt="도서관">도서관
+                            </h2>
+                        </a>
+                    </li>
+                </ul>
+            </arricle>
+            <article class="banner">
+                <a href="#">
+                    <p class="imgBox">
+                        <img src="img/banner.png" alt="홍길동인터뷰">
+                    </p>
+                    <div class="txtBox">
+                        <h2>기능대학교 외국어학부 20학번 홍길동 인터뷰</h2>
+                        <p class="date">2023-12-13</p>
+                        <p class="txt">기능대학교 외국어학부 홍길동학부와 함께<br>
+                            기능대학교 2023전시회 현장스케치를 함께 보도록 할까요?
+                        </p>
+                    </div>
+                    <p class="arrow">
+                        <img src="img/arrow.png" alt="바로가기">
+                    </p>
+                </a>
+            </article>
+            <article class="board">
+                <div class="notice">
+                    <h2>공지사항</h2>
+                    <table>
+                        <tr>
+                            <th>
+                                <a href="#" class="pp">[공지] 2024년 탁상용 달력 신청 안내</a>
+                            </th>
+                            <td>
+                                2023-10-13
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                <a href="#">[공지] 24-1학기 &lt;한국어교육실습&gt;교과목 사전 자격 심사 및 수강신청 안내/a>
+                            </th>
+                            <td>
+                                2023-07-12
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                <a href="#">[공지] 2023 통계 집중(계절)학기 기말고사 시행 안내</a>
+                            </th>
+                            <td>
+                                2023-05-20
+                            </td>
+                        </tr>
+                        <tr>
+                            <th>
+                                <a href="#">[공지] 한국정보인증 바이오(공인) 인증서 로그인 일시 중단 안내</a>
+                            </th>
+                            <td>
+                                2023-02-13
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+                <div class="gall">
+                    <h2>갤러리</h2>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <p class="box"><img src="img/g1.png" alt="대학생활"></p>
+                                <span>대학생활</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="box"><img src="img/g2.png" alt="캠퍼스투어"></p>
+                                <span>캠퍼스투어</span>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="box"><img src="img/g3.png" alt="해외프로그램"></p>
+                                <span>해외프로그램</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </article>
+        </div>
+        <footer>
+            <div>
+                <ul class="sns">
+                    <li><a href="#"><img src="img/sns1.png" alt="네이버"></a></li>
+                    <li><a href="#"><img src="img/sns2.png" alt="페이스북"></a></li>
+                    <li><a href="#"><img src="img/sns3.png" alt="유튜브"></a></li>
+                </ul>
+                <select>
+                    <option>Family Site</option>
+                    <option>평생교육원</option>
+                    <option>전자도서관</option>
+                    <option>글로벌교육원</option>
+                </select>
+            </div>
+            <p class="copy">
+                It is a long established fact that a reader will be distracted by the readeable content of a page when looking at its layout.<br>
+                Copyright 2024. leeminiclass All rights reserved.
+            </p>
+        </footer>
+        <div class="popup">
+            <div class="popcon">
+                <h2>언어를 배우다! 문화를 만나다.</h2>
+                <img src="img/popup.jpg" alt="언어를 배우다! 문화를 만나다.">
+                <p>2024-1학기 신·편입생 모집 : <br>2023.12.1.(금) ~ 2024.1.15.(월) 21시</p>
+                <p class="close"><button>CLOSE X</button></p>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
