--- a/A-3/index.html
+++ b/A-3/index.html
@@ -159,7 +159,7 @@
             <h2>연장운행안내</h2>
             <p class="img"><img src="img/pop.jpg" alt="여름휴가안내"></p>
             <p class="text">사전예약제입니다. 조기 예약 마감될수 있으니<br> 예약페이지를 참고하세요.</p>
-            <p class="button"><button>CLOSE X</button></p>
+            <p class="button"><button>X 닫기</button></p>
         </div>
     </div>
 </body>
