--- a/B-4/index.html
+++ b/B-4/index.html
@@ -154,7 +154,7 @@
                     <li>◈ 휴관대상 : 중앙도서관, 새벽별도서관, 법학도서관, 미리내열람실</li>
                     <li>◈ 작업일정 : 방역소독(8월 18일) / 대청소(8월 19일)</li>
                 </ul>
-                <p class="button"><button>CLOSE X</button></p>
+                <p class="button"><button>X 닫기</button></p>
             </div>
         </div>
 </body>
