--- a/D-2/index.html
+++ b/D-2/index.html
@@ -170,7 +170,7 @@
                 <h2>서울브랜드 슬로건 결선투표</h2>
                 <p><img src="img/pop.jpg" alt="서울브랜드 슬로건 결선투표"></p>
                 <p class="text">서울브랜드 슬로건 결선투표하러 출발!</p>
-                <p class="button"><button class="close">CLOSE X</button></p>
+                <p class="button"><button class="close">X 닫기</button></p>
             </div>
         </div>
     </div>
