--- a/E-4/index.html
+++ b/E-4/index.html
@@ -210,7 +210,7 @@
                 <h2>2032년 철길마을 OPEN!</h2>
                 <p class="img"><img src="img/popup.jpg" alt="철길마을 오픈!"></p>
                 <p class="text">2032년 철길마을 전면개관을 알립니다.</p>
-                <p class="close"><button>CLOSE X</button></p>
+                <p class="close"><button>X 닫기</button></p>
             </div>
         </div>
     </div>
