--- a/F-1/index.html
+++ b/F-1/index.html
@@ -211,7 +211,7 @@
             <h2>자연을 오피스로 옮기다!</h2>
             <img src="img/popup.jpg" alt="자연을 오피스로 옮기다!">
             <p>Biophilic Office Design을 통해 친환경적인 오피스 설계로 수반하는 것이 무엇이 이점이 되는지 살펴 보겠습니다.</p>
-            <p class="close"><button>CLOSE X</button></p>
+            <p class="close"><button>X 닫기</button></p>
         </div>
     </div>
 </body>
