--- a/F-2/index.html
+++ b/F-2/index.html
@@ -212,7 +212,7 @@
                 <h2>언어를 배우다! 문화를 만나다.</h2>
                 <img src="img/popup.jpg" alt="언어를 배우다! 문화를 만나다.">
                 <p>2024-1학기 신·편입생 모집 : <br>2023.12.1.(금) ~ 2024.1.15.(월) 21시</p>
-                <p class="close"><button>CLOSE X</button></p>
+                <p class="close"><button>X 닫기</button></p>
             </div>
         </div>
     </div>
