--- a/F-3/index.html
+++ b/F-3/index.html
@@ -32,7 +32,7 @@
                                 <li><a href="#">자동이체</a></li>
                                 <li><a href="#">예약이체</a></li>
                             </ul>
-                        </li># <li><a href="#">공과금</a>
+                        </li> <li><a href="#">공과금</a>
                             <ul class="sub">
                                 <li><a href="#">지로/생활요금</a></li>
                                 <li><a href="#">지방세</a></li>
