--- a/F-4/index.html
+++ b/F-4/index.html
@@ -196,6 +196,19 @@
                 </article>
             </div>
         </div>
+        <footer>
+            <p class="flogo"><img src="img/flogo.png" alt="하이글로벌컴퍼니"></p>
+            <select>
+                <option>Family Site</option>
+                <option>금호석유화학</option>
+                <option>나노종합기술원</option>
+                <option>SK실트론</option>
+            </select>
+            <p class="copy">
+                It is a long established fact that a reader will be distracted by the readeable content of a page when looking at its layout.<br>
+                Copyright 2024. leeminiclass All rights reserved.
+            </p>
+        </footer>
         <div class="popup">
             <div class="popcon">
                 <h2>반도체 분석 센터 설립</h2>
