--- a/A-1/index.html
+++ b/A-1/index.html
@@ -181,7 +181,7 @@
                 위와 같은 일정으로 휴가를 실시합니다.<br>
                 더 좋은 모습으로 찾아뵙겠습니다.
             </p>
-            <p class="button"><button>X 닫기</button></p>
+            <p class="close"><button>X 닫기</button></p>
         </div>
     </div>
 </body>
