--- a/C-2/index.html
+++ b/C-2/index.html
@@ -9,6 +9,21 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-   
+    <div class="wrap">
+        <header>
+            <div class="inner">
+                <h1><a href="#"><img src="img/logo.png" alt="부여가을연꽃축제"></a></h1>
+                <nav>
+                    <ul>
+                        <li><a href="#"></a>
+                            <ul class="sub">
+                                <li><a href="#"></a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    </div>
 </body>
 </html>
