--- a/C-3/index.html
+++ b/C-3/index.html
@@ -9,6 +9,127 @@
     <script src="js/script.js"></script>
 </head>
 <body>
-   
+    <div class="wrap">
+        <header>
+            <div class="inner">
+                <h1><a href="#"><img src="img/logo.png" alt="남도맛기행축제"></a></h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">협회소개</a>
+                            <ul class="sub">
+                                <li><a href="#">인사말</a></li>
+                                <li><a href="#">명인</a></li>
+                                <li><a href="#">오시는길</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">행사안내</a>
+                            <ul class="sub">
+                                <li><a href="#">요리경연대회</a></li>
+                                <li><a href="#">전시참가</a></li>
+                                <li><a href="#">참가신청</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">홍보마당</a>
+                            <ul class="sub">
+                                <li><a href="#">축제소식</a></li>
+                                <li><a href="#">보도자료</a></li>
+                                <li><a href="#">레시피</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">회원마당</a>
+                            <ul class="sub">
+                                <li><a href="#">Q&A</a></li>
+                                <li><a href="#">사진갤러리</a></li>
+                                <li><a href="#">공지사항</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+        <div class="contents">
+            <section class="slide">
+                <ul>
+                    <li class="s1">
+                        <a href="#">
+                            <h2>1대한민국 테마여행 10선 남도맛기행축제</h2>
+                        </a>
+                    </li>
+                    <li class="s2">
+                        <a href="#">
+                            <h2>2대한민국 테마여행 10선 남도맛기행축제</h2>
+                        </a>
+                    </li>
+                    <li class="s3">
+                        <a href="#">
+                            <h2>3대한민국 테마여행 10선 남도맛기행축제</h2>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+            <div class="con">
+                <article class="notice">
+                    <h2>공지사항</h2>
+                    <table>
+                        <tr>
+                            <th><a href="#" class="pp">단체여행 견적문의도 가능한가요?</a></th>
+                            <td>08/03</td>
+                        </tr>
+                        <tr>
+                            <th><a href="#">예약확인은 어디서 하나요?</a></th>
+                            <td>07/01</td>
+                        </tr>
+                        <tr>
+                            <th><a href="#">취소 및 환불 규정은 어떻게 되나요?</a></th>
+                            <td>03/24</td>
+                        </tr>
+                        <tr>
+                            <th><a href="#">여행경비에 대한 현금영수증발급 가능한가요? </a></th>
+                            <td>03/02</td>
+                        </tr>
+                    </table>
+                </article>
+                <article class="gall">
+                    <h2>갤러리</h2>
+                    <ul>
+                        <li><a href="#"><img src="img/g1.jpg" alt="갤러리1"></a></li>
+                        <li><a href="#"><img src="img/g2.jpg" alt="갤러리2"></a></li>
+                        <li><a href="#"><img src="img/g3.jpg" alt="갤러리3"></a></li>
+                    </ul>
+                </article>
+                <article class="go">
+                    <h2>배너</h2>
+                    <a href="#">
+                        <div>
+                            <h3>보고 먹고 즐기는 <br> 여행 패키지</h3>
+                            <span>KTX 버스자유식/식사포함</span>
+                        </div>
+                    </a>
+                </article>
+            </div>
+            <footer>
+                <p class="flogo"><a href="#"><img src="img/flogo.png" alt="남도맛기행축제"></a></p>
+                <div>
+                    <ul class="fmenu">
+                        <li><a href="#">전화번호안내</a></li>
+                        <li><a href="#">개인정보처리방침</a></li>
+                        <li><a href="#">저작권보호정책</a></li>
+                        <li><a href="#">찾아오시는길</a></li>
+                    </ul>
+                    <p class="fcopy">
+                        Copyright 2024. leeminiclass All rights reserved.
+                    </p>
+                </div>
+            </footer>
+        </div>
+        <div class="popup">
+            <h2>남도맛기행축제로 모두 오세요!</h2>
+            <p>
+                <img src="img/pop.jpg" alt="남도맛기행축제로 모두 오세요!"> <br>
+                남도맛기행축제로 모두 오세요!
+            </p>
+            <p class="close"><button>X 닫기</button></p>
+        </div>
+    </div>
 </body>
 </html>
