--- a/D-1/index.html
+++ b/D-1/index.html
@@ -15,20 +15,23 @@
                 <h1><a href="#"><img src="img/logo.png" alt="조이컨트리클럽"></a></h1>
                 <nav>
                     <ul>
-                        <li><a href="#">CLUB</a>
+                        <li>
+                            <a href="#">CLUB</a>
                             <ul class="sub">
                                 <li><a href="#">클럽소개</a></li>
                                 <li><a href="#">시설안내</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">BOOKING</a>
+                        <li>
+                            <a href="#">BOOKING</a>
                             <ul class="sub">
                                 <li><a href="#">요금안내</a></li>
                                 <li><a href="#">예약안내</a></li>
                                 <li><a href="#">위약안내</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">INFORMATION</a>
+                        <li>
+                            <a href="#">INFORMATION</a>
                             <ul class="sub">
                                 <li><a href="#">명예의 전당</a></li>
                                 <li><a href="#">이벤트</a></li>
@@ -36,7 +39,8 @@
                                 <li><a href="#">자료실</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">COMMUNITY</a>
+                        <li>
+                            <a href="#">COMMUNITY</a>
                             <ul class="sub">
                                 <li><a href="#">공지사항</a></li>
                                 <li><a href="#">Q&amp;A</a></li>
@@ -57,7 +61,7 @@
                                 <div class="text">
                                     <h2>1자연과 사람이 공존하는 <span>명품 컨트리 클럽</span></h2>
                                     <p>
-                                        단순히 골프를 즐기는 곳이 아닌 골프를 통해 마음의 여유와 안식을 찾는 휴식공간입니다.
+                                        단순히 골프를즐기는 곳이 아닌 골프를 통해 마음의 여유와 안식을 찾는 휴식공간입니다. 
                                     </p>
                                 </div>
                             </a>
@@ -65,7 +69,7 @@
                         <li class="s2">
                             <a href="#">
                                 <div class="text">
-                                    <h2><span>골프연습장(42타석, 200M)</span>및 헬스시설등 부대시설</h2>
+                                    <h2><span>골프연습장(42타석, 200M)</span> 및 헬스시설등 부대시설</h2>
                                     <p>최고의 프로 강사진에 의한 다양한 프로그램으로 회원님들의 취약점을 교정하고, 실전 경험을 한층 업그레이드 해 드립니다.</p>
                                 </div>
                             </a>
@@ -73,8 +77,8 @@
                         <li class="s3">
                             <a href="#">
                                 <div class="text">
-                                    <h2><span>고객의 더 큰 만족</span> <span>품격</span>에 맞는 진정한 서비스</h2>
-                                    <p>최고의 접근성, 자연 그대로의 아름다운 경관과 대자연이 주는 품격있는 코스를 선사해 드릴것을 약속합니다.</p>
+                                    <h2><span>고객의 더 큰 만족</span>과 <span>품격</span>에 맞는 진정한 서비스</h2>
+                                    <p>최고의 접근성, 자연 그대로의 아름다운 경관과 대자연이 주는 품격있는 코스를 선사해 드릴것을약속합니다.</p>
                                 </div>
                             </a>
                         </li>
@@ -89,7 +93,7 @@
                             <h2>소소한 멤버들과 함께 2032년 연단체 추가 모집 안내!</h2>
                             <ul>
                                 <li>모집기간 : 2032년 2월 23일(목)부터 마감시까지</li>
-                                <li>운영시간 : 주중(월~ 금요일) 1부 (7~8시대) / 2부(12시대) <strong>(*요일 및 시간대는 예약실 협의 후 결정)</strong></li>
+                                <li>운영시간 : 주중(월~ 금요일) 1부(7~8시대) / 2부(12시대) <strong>(*요일 및 시간대는 예약실 협의 후 결정)</strong></li>
                             </ul>
                         </div>
                         <div class="arrow">
@@ -115,7 +119,7 @@
                                     <tr>
                                         <th>
                                             <a href="#">
-                                                골프 초보 레슨 기간 2개월 차 후기(Feat.순서 단계&골프체 종류)
+                                                골프 초보 레슨 기간 2개월 차 후기(Feat.순서 단계&골프채 종류)
                                             </a>
                                         </th>
                                         <td>
@@ -124,8 +128,8 @@
                                     </tr>
                                     <tr>
                                         <th>
-                                            <a href="#">
-                                                핑 골프 G430HL 남자 여자 드라이버 골프체 추천 후기
+                                            <a href="#" >
+                                                핑 골프 G430HL 남자 여자 드라이버 골프채 추천 후기
                                             </a>
                                         </th>
                                         <td>
@@ -135,7 +139,7 @@
                                     <tr>
                                         <th>
                                             <a href="#">
-                                                "라운딩 시즌 돌아온다"...이마트, 봄맞이 골프 행사
+                                                "라운딩 시즌 돌아온다"…이마트, 봄맞이 골프 행사
                                             </a>
                                         </th>
                                         <td>
@@ -194,29 +198,29 @@
                     </div>
                 </div>
             </div>
-            <footer>
-                <p class="flogo">
-                    <img src="img/flogo.png" alt="조이컨트리클럽">
-                </p>
-                <ul class="sns">
-                    <li><a href="#"><img src="img/sns1.png" alt="페이스북"></a></li>
-                    <li><a href="#"><img src="img/sns2.png" alt="네이버블로그"></a></li>
-                    <li><a href="#"><img src="img/sns3.png" alt="유튜브"></a></li>
-                </ul>
-                <p class="copy">
-                    It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. <br>
-                    Copyright 2024. leemindesignclass All rights reserved.
-                </p>
-            </footer>
-            <div class="popcon">
-                <h2>자연과 사람이 공존하는 명품 컨트리 클럽 OPEN!</h2>
-                <p>
-                    <img src="img/pop.jpg" alt="명품 컨트리 클럽 OPEN!"> <br>
-                    2032년 새해의 첫 절기 <br>
-                    봄이 시작되는 3월 즐거운 라운딩을 계획해보세요!
-                </p>
-                <p class="close"><button>X 닫기</button></p>
-            </div>
+        </div>
+        <footer>
+            <p class="flogo">
+                <img src="img/flogo.png" alt="조이컨트리클럽">
+            </p>
+            <ul class="sns">
+                <li><a href="#"><img src="img/sns1.png" alt="페이스북"></a></li>
+                <li><a href="#"><img src="img/sns2.png" alt="네이버블로그"></a></li>
+                <li><a href="#"><img src="img/sns3.png" alt="유튜브"></a></li>
+            </ul>
+            <p class="copy">
+                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.<br>
+                Copyright 2024. leemindesigniclass All rights reserved.
+            </p>
+        </footer>
+        <div class="popcon">
+            <h2>자연과 사람이 공존하는 명품 컨트리 클럽  OPEN!</h2>
+            <p>
+                <img src="img/pop.jpg" alt="명품 컨트리 클럽  OPEN!"><br>
+                2032년 새해의 첫 절기<br>
+                봄이 시작되는 3월 즐거운 라운딩을 계획해보세요!
+            </p>
+            <button>X 닫기</button>
         </div>
     </div>
 </body>
