--- a/D-1/index.html
+++ b/D-1/index.html
@@ -220,7 +220,7 @@
                 2032년 새해의 첫 절기<br>
                 봄이 시작되는 3월 즐거운 라운딩을 계획해보세요!
             </p>
-            <button>X 닫기</button>
+            <p class="close"><button>X 닫기</button></p>
         </div>
     </div>
 </body>
