--- a/E-2/index.html
+++ b/E-2/index.html
@@ -3,9 +3,154 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>역사박물관</title>
+    <link rel="stylesheet" href="css/style.css">
+    <script src="js/jquery-1.12.3.js"></script>
+    <script src="js/script.js"></script>
 </head>
 <body>
-    
+    <div class="wrap">
+        <div class="top">
+            <header>
+                <h1><a href="#"><img src="img/logo.png" alt="역사박물관"></a></h1>
+                <nav>
+                    <ul>
+                        <li><a href="#">박물관소개</a>
+                            <ul class="sub">
+                                <li><a href="#">인사말</a></li>
+                                <li><a href="#">박물관연혁</a></li>
+                                <li><a href="#">유물현황</a></li>
+                                <li><a href="#">관람안내</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">전시</a>
+                            <ul class="sub">
+                                <li><a href="#">선사시대</a></li>
+                                <li><a href="#">삼국시대</a></li>
+                                <li><a href="#">조선시대</a></li>
+                                <li><a href="#">근대시대</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">연구</a>
+                            <ul class="sub">
+                                <li><a href="#">생활유적</a></li>
+                                <li><a href="#">분묘유적</a></li>
+                                <li><a href="#">생산유적</a></li>
+                                <li><a href="#">통신유적</a></li>
+                            </ul>
+                        </li>
+                        <li><a href="#">교육</a>
+                            <ul class="sub">
+                                <li><a href="#">문화행사</a></li>
+                                <li><a href="#">진로체험</a></li>
+                                <li><a href="#">외부교육</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="contents">
+                <article class="con1">
+                    <h2>공지사항</h2>
+                    <table>
+                        <tr>
+                            <th class="title"><a href="#" class="pp">역사박물관에 오신것을 환영합니다.</a></th>
+                            <td>2032-07-12</td>
+                        </tr>
+                        <tr>
+                            <th class="title"><a href="#">2023년 진로탐구과정(단체) 신청 안내.</a></th>
+                            <td>2032-04-29</td>
+                        </tr>
+                        <tr>
+                            <th class="title"><a href="#">2023년 청소년 자원봉사자 모집 안내.</a></th>
+                            <td>2032-03-12</td>
+                        </tr>
+                        <tr>
+                            <th class="title"><a href="#">학교 과학체험 부스 모집 공고.</a></th>
+                            <td>2032-01-29</td>
+                        </tr>
+                    </table>
+                </article>
+                <article class="con2">
+                    <h2>갤러리</h2>
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="img/g1.jpg" alt="공룡 전시회"></p>
+                                <p class="text">공룡 전시회</p>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="img/g2.jpg" alt="과거SF관"></p>
+                                <p class="text">과거SF관</p>
+                            </a>
+                        </li>
+                    </ul>
+                </article>
+                <article class="con3">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="img/icon01.png" alt="문화행사"></p>
+                                <h2 class="text">문화행사</h2>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="img/icon02.png" alt="연구"></p>
+                                <h2 class="text">연구</h2>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="img/icon03.png" alt="전시"></p>
+                                <h2 class="text">전시</h2>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <p class="photo"><img src="img/icon04.png" alt="관람안내"></p>
+                                <h2 class="text">관람안내</h2>
+                            </a>
+                        </li>
+                    </ul>
+                </article>
+            </div>
+            <div class="slide">
+                <ul>
+                    <li class="s1">
+                        <a href="#">
+                            <div class="text">
+                                <h2>공룡 전시회</h2>
+                                <p>2032년 1월 1일 ~ 2032년 6월 30일까지!<br>&lt;제 1전시실&gt;</p>
+                            </div>
+                        </a>
+                    </li>
+                    <li class="s2">
+                        <a href="#">
+                            <div class="text">
+                                <h2>세계속으로</h2>
+                                <p>2032년 1월 1일 ~ 2032년 2월 10일까지!<br>&lt;제 3전시실&gt;</p>
+                            </div>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <footer>
+            <p class="flogo"><img src="img/logo.png" alt="역사박물관"></p>
+            <select>
+                <option>FAMILY SITE</option>
+                <option>서울역사박물관</option>
+                <option>부산역사박물관</option>
+                <option>대구역사박물관</option>
+                <option>제주역사박물관</option>
+            </select>
+            <p class="copy">
+                It is a long established 
+            </p>
+        </footer>
+    </div>
 </body>
 </html>
