--- a/E-2/index.html
+++ b/E-2/index.html
@@ -135,6 +135,14 @@
                             </div>
                         </a>
                     </li>
+                    <li class="s3">
+                        <a href="#">
+                            <div class="text">
+                                <h2>나사 이야기</h2>
+                                <p>2032년 5월 1일 ~ 2032년 6월 20일까지!<br>&lt;제 3전시실&gt;</p>
+                            </div>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -148,9 +156,20 @@
                 <option>제주역사박물관</option>
             </select>
             <p class="copy">
-                It is a long established 
+                It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. <br>
+                Copyright 2024. leeminiclass All rights reserved.
             </p>
         </footer>
+        <div class="popup">
+            <div class="popcon">
+                <h2>박물관 2032년 OPEN!</h2>
+                <p><img src="img/pop.jpg" alt="박물관 2032년 OPEN!"><br>
+                    역사박물관이 2032년 1월 2일 오픈합니다. <br>
+                    많은 관심 부탁드립니다!
+                </p>
+                <p class="close"><button>X 닫기</button></p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
