--- a/B-1/index.html
+++ b/B-1/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>대한은행</title>
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/jquery-1.12.3.js"></script>
-    <script src="js/script.js"></script>
+    <script src="script/jquery-1.12.3.js"></script>
+    <script src="script/script.js"></script>
 </head>
 <body>
     <div class="wrap">
