--- a/F-2/index.html
+++ b/F-2/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>기능대학교</title>
     <link rel="stylesheet" href="css/style.css">
-    <script src="jsscript/jquery-1.12.3.js"></script>
-    <script src="js/script.js"></script>
+    <script src="script/jquery-1.12.3.js"></script>
+    <script src="script/script.js"></script>
 </head>
 <body>
     <div class="wrap">
