--- a/B-1/index.html
+++ b/B-1/index.html
@@ -159,8 +159,7 @@
         </footer>
         <div class="popup">
             <h2>우수중소기업탐방 프로그램 참가모집</h2>
-            <p class="text"><img src="img/pop.jpg" alt="우수중소기업탐방 프로그램 참가모집"><br>
-                스타트업 취 창업에 관심이 있는 대학생 30명 내외 모집합니다.</p>
+            <p>스타트업 취 창업에 관심이 있는 대학생 30명 내외 모집합니다.</p>
             <p class="close"><button>X 닫기</button></p>
         </div>
     </div>
