--- a/B-2/index.html
+++ b/B-2/index.html
@@ -144,7 +144,7 @@
         <div class="popup">
             <div class="popcon">
                 <h2>컨셉투어 여행자 모집</h2>
-                <p class="text"><img src="img/pop.jpg" alt="컨셉투어 여행자 모집"><br>컨셉투어 여행자 모집합니다. <br> 관심있는 분들 클릭!</p>
+                <p>컨셉투어 여행자 모집합니다. <br> 관심있는 분들 클릭!</p>
                 <p class="close"><button>X 닫기</button></p>
             </div>
         </div>
