--- a/C-3/index.html
+++ b/C-3/index.html
@@ -124,10 +124,7 @@
         </div>
         <div class="popup">
             <h2>남도맛기행축제로 모두 오세요!</h2>
-            <p>
-                <img src="img/pop.jpg" alt="남도맛기행축제로 모두 오세요!"> <br>
-                남도맛기행축제로 모두 오세요!
-            </p>
+            <p>남도맛기행축제로 모두 오세요!</p>
             <p class="close"><button>X 닫기</button></p>
         </div>
     </div>
