--- a/D-2/index.html
+++ b/D-2/index.html
@@ -64,8 +64,7 @@
                                 <a href="#">
                                     <div class="text">
                                         <h2>봉사로 빛나는 포트폴리오! '서울동행' 대학생 멘토 모집</h2>
-                                        <p>서울시자원봉사센터가 ‘서울동행’에 참여할 대학(원)생 멘토 봉사자를 3월 31일까지 모집한다.
-</p>
+                                        <p>서울시자원봉사센터가 ‘서울동행’에 참여할 대학(원)생 멘토 봉사자를 3월 31일까지 모집한다.</p>
                                     </div>
                                 </a>
                             </li>
@@ -168,7 +167,6 @@
         <div class="popup">
             <div class="popcon">
                 <h2>서울브랜드 슬로건 결선투표</h2>
-                <p><img src="img/pop.jpg" alt="서울브랜드 슬로건 결선투표"></p>
                 <p class="text">서울브랜드 슬로건 결선투표하러 출발!</p>
                 <p class="button"><button class="close">X 닫기</button></p>
             </div>
