--- a/E-3/index.html
+++ b/E-3/index.html
@@ -157,8 +157,7 @@
         </footer>
         <div class="popcon">
             <h2>영상 박물관 체험행사!</h2>
-            <p><img src="img/popup.jpg" alt="팝업의 이미지"> <br>
-                영상 박물관 체험행사가 3월부터 진행됩니다.</p>
+            <p>영상 박물관 체험행사가 3월부터 진행됩니다.</p>
             <p class="close"><button>X 닫기</button></p>
         </div>
     </div>
