--- a/A-1/index.html
+++ b/A-1/index.html
@@ -71,7 +71,7 @@
                     </ul>
                 </section>
                 <div class="con">
-                    <article class="con1">
+                    <article class="contents">
                         <ul class="tabmenu">
                             <li class="on"><h2><a href="#">공지사항</a></h2>
                                 <div class="notice tabcon">
@@ -122,7 +122,7 @@
                             </li>
                         </ul>
                     </article>
-                    <article class="con2">
+                    <article class="banner">
                         <a href="#">
                             <div>
                                 <h2>회원가입 시 적립금 + 할인쿠폰</h2>
@@ -135,25 +135,22 @@
                             </div>
                         </a>
                     </article>
-                    <aritcle class="con3">
+                    <aritcle class="go">
                         <h2>바로가기</h2>
                         <ul>
                             <li>
                                 <a href="#">
-                                    <p><img src="img/icon01.png" alt="출석체크"></p>
-                                    <span>출석체크</span>
+                                    <p>출석체크</p>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <p><img src="img/icon02.png" alt="배송조회"></p>
-                                    <span>배송조회</span>
+                                    <p>배송조회</p>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <p><img src="img/icon03.png" alt="즐겨찾기"></p>
-                                    <span>즐겨찾기</span>
+                                    <p>즐겨찾기</p>
                                 </a>
                             </li>
                         </ul>
@@ -163,9 +160,9 @@
             <footer>
                 <p class="flogo"><img src="img/flogo.png" alt="just 쇼핑몰"></p>
                 <ul class="fsns">
-                    <li><a href="#"><img src="img/sns1.png" alt="페이스북"></a></li>
-                    <li><a href="#"><img src="img/sns2.png" alt="네이버블로그"></a></li>
-                    <li><a href="#"><img src="img/sns3.png" alt="유튜브"></a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">NaverBlog</a></li>
+                    <li><a href="#">Youtube</a></li>
                 </ul>
                 <p class="fcopy">
                     It is a long established fact that a reader will be distracted.<br>
