--- a/A-2/index.html
+++ b/A-2/index.html
@@ -68,7 +68,7 @@
                     </ul>
                 </section>
                 <div class="con">
-                    <article class="con1">
+                    <article class="notice">
                         <h2>공지사항</h2>
                         <table>
                             <tr>
@@ -89,7 +89,7 @@
                             </tr>
                         </table>
                     </article>
-                    <article class="con2">
+                    <article class="gall">
                         <h2>갤러리</h2>
                         <ul>
                             <li><a href="#"><img src="img/g1.jpg" alt="갤러리 후기 1"></a></li>
@@ -97,7 +97,7 @@
                             <li><a href="#"><img src="img/g3.jpg" alt="갤러리 후기 3"></a></li>
                         </ul>
                     </article>
-                    <article class="con3">
+                    <article class="bnner">
                         <a href="#">
                             <div>
                                 <p class="title">세계 환경의 날 캠페인!</p>
