--- a/A-3/index.html
+++ b/A-3/index.html
@@ -71,7 +71,7 @@
                     </ul>
                 </section>
                 <div class="con">
-                    <article class="con1">
+                    <article class="contents">
                         <ul class="tabmenu">
                             <li class="on"><h2><a href="#">공지사항</a></h2>
                                 <div class="notice tabcon">
@@ -105,7 +105,7 @@
                             </div>
                         </ul>
                     </article>
-                    <article class="con2">
+                    <article class="banner">
                         <a href="#">
                             <div>
                                 <h2>천문과학교육관단체 1박2일 <br><span>체험프로그램(전화예약)</span></h2>
@@ -113,25 +113,22 @@
                             </div>
                         </a>
                     </article>
-                    <article class="con3">
+                    <article class="go">
                         <h2>바로가기</h2>
                         <ul>
                             <li>
                                 <a href="#">
-                                    <p><img src="img/icon01.png" alt="예약안내"></p>
-                                    <span>예약안내</span>
+                                    <p>예약안내</p>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <p><img src="img/icon02.png" alt="위치안내"></p>
-                                    <span>위치안내</span>
+                                    <p>위치안내</p>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <p><img src="img/icon03.png" alt="문의전화"></p>
-                                    <span>문의전화</span>
+                                    <p>문의전화</p>
                                 </a>
                             </li>
                         </ul>
