--- a/A-4/index.html
+++ b/A-4/index.html
@@ -67,7 +67,7 @@
                     </ul>
                 </section>
                 <div class="con">
-                    <article class="con1">
+                    <article class="notice">
                         <h2>공지사항</h2>
                         <div>
                             <table>
@@ -90,7 +90,7 @@
                             </table>
                         </div>
                     </article>
-                    <article class="con2">
+                    <article class="gall">
                         <h2>갤러리</h2>
                         <div>
                             <ul>
@@ -100,26 +100,23 @@
                             </ul>
                         </div>
                     </article>
-                    <article class="con3">
+                    <article class="go">
                         <h2>바로가기</h2>
                         <div>
                             <ul>
                                 <li>
                                     <a href="#">
-                                        <p><img src="img/icon01.png" alt="채용일정"></p>
-                                        <span>채용일정</span>
+                                        <p>채용일정</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <p><img src="img/icon02.png" alt="오시는길"></p>
-                                        <span>오시는길</span>
+                                        <p>오시는길</p>
                                     </a>
                                 </li>
                                 <li>
                                     <a href="#">
-                                        <p><img src="img/icon03.png" alt="즐겨찾기"></p>
-                                        <span>즐겨찾기</span>
+                                        <p>즐겨찾기</p>
                                     </a>
                                 </li>
                             </ul>
