--- a/B-3/index.html
+++ b/B-3/index.html
@@ -130,9 +130,9 @@
             <div class="inner">
                 <p class="flogo"><img src="img/flogo.png" alt="세계의 미술작품"></p>
                 <ul class="sns">
-                    <li><a href="#"><img src="img/sns1.png" alt="네이버블로그"></a></li>
-                    <li><a href="#"><img src="img/sns2.png" alt="페이스북"></a></li>
-                    <li><a href="#"><img src="img/sns3.png" alt="유튜브"></a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">NaverBlog</a></li>
+                    <li><a href="#">Youtube</a></li>
                 </ul>
                 <p class="fcopy">
                     It is a long established fact that a reader will be distracted. <br>
