--- a/C-2/index.html
+++ b/C-2/index.html
@@ -104,19 +104,16 @@
                     <ul>
                         <li>
                             <a href="#">
-                                <span><img src="img/icon01.png" alt="출석체크"></span>
                                 <p>출석체크</p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span><img src="img/icon02.png" alt="오시는길"></span>
                                 <p>오시는길</p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span><img src="img/icon03.png" alt="즐겨찾기"></span>
                                 <p>즐겨찾기</p>
                             </a>
                         </li>
@@ -126,9 +123,9 @@
             <footer>
                 <div>
                 <ul class="fsns">
-                    <li><a href="#"><img src="img/sns1.png" alt="네이버블로그"></a></li>
-                    <li><a href="#"><img src="img/sns2.png" alt="페이스북"></a></li>
-                    <li><a href="#"><img src="img/sns3.png" alt="유튜브"></a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">NaverBlog</a></li>
+                    <li><a href="#">Youtube</a></li>
                 </ul>
                 <select>
                     <option>Family Site</option>
