--- a/D-1/index.html
+++ b/D-1/index.html
@@ -178,20 +178,17 @@
                         <ul>
                             <li>
                                 <a href="#">
-                                    <img src="img/icon01.png" alt="전화문의">
-                                    <span>전화문의</span>
+                                    <p>전화문의</p>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="img/icon02.png" alt="예약하기">
-                                    <span>예약하기</span>
+                                    <p>예약하기</p>
                                 </a>
                             </li>
                             <li>
                                 <a href="#">
-                                    <img src="img/icon03.png" alt="오시는길">
-                                    <span>오시는길</span>
+                                    <p>오시는길</p>
                                 </a>
                             </li>
                         </ul>
@@ -204,9 +201,9 @@
                 <img src="img/flogo.png" alt="조이컨트리클럽">
             </p>
             <ul class="sns">
-                <li><a href="#"><img src="img/sns1.png" alt="페이스북"></a></li>
-                <li><a href="#"><img src="img/sns2.png" alt="네이버블로그"></a></li>
-                <li><a href="#"><img src="img/sns3.png" alt="유튜브"></a></li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">NaverBlog</a></li>
+                <li><a href="#">Youtube</a></li>
             </ul>
             <p class="copy">
                 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.<br>
