--- a/D-3/index.html
+++ b/D-3/index.html
@@ -153,16 +153,13 @@
                 </div>
                 <div class="quick">
                     <a href="#">
-                        <img src="img/icon01.png" alt="전화문의"> <br>
-                        <span>전화문의</span>
+                        <p>전화문의</p>
                     </a>
                     <a href="#">
-                        <img src="img/icon02.png" alt="예약하기"> <br>
-                        <span>예약하기</span>
+                        <p>예약하기</p>
                     </a>
                     <a href="#">
-                        <img src="img/icon03.png" alt="오시는길"> <br>
-                        <span>오시는길</span>
+                        <p>오시는길</p>
                     </a>
                 </div>
             </div>
