--- a/E-3/index.html
+++ b/E-3/index.html
@@ -146,9 +146,9 @@
         <footer>
             <p class="flogo"><img src="img/flogo.png" alt="영상박물관"></p>
             <ul>
-                <li><a href="#"><img src="img/sns1.png" alt="네이버 블로그"></a></li>
-                <li><a href="#"><img src="img/sns2.png" alt="페이스북"></a></li>
-                <li><a href="#"><img src="img/sns3.png" alt="유튜브"></a></li>
+                <li><a href="#">Facebook</a></li>
+                <li><a href="#">NaverBlog</a></li>
+                <li><a href="#">Youtube</a></li>
             </ul>
             <p class="copy">
                 It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. <br>
