--- a/B-1/index.html
+++ b/B-1/index.html
@@ -70,7 +70,7 @@
             </ul>
         </section>
         <div class="contents">
-            <article class="con1">
+            <article class="con">
                 <ul class="tabmenu">
                     <li class="on"><h2><a href="#">공지사항</a></h2>
                         <div class="notice tabcon">
@@ -121,7 +121,7 @@
                     </li>
                 </ul>
             </article>
-            <article class="con2">
+            <article class="banner">
                 <h2>배너</h2>
                 <a href="#">
                     <div>
@@ -130,12 +130,12 @@
                     </div>
                 </a>
             </article>
-            <article class="con3">
+            <article class="go">
                 <h2>바로가기</h2>
                 <ul>
-                    <li><a href="#"><p><img src="img/icon01.png" alt="예약조회"></p> <span>예약조회</span></a></li>
-                    <li><a href="#"><p><img src="img/icon02.png" alt="오시는길"></p> <span>오시는길</span></a></li>
-                    <li><a href="#"><p><img src="img/icon03.png" alt="즐겨찾기"></p> <span>즐겨찾기</span></a></li>
+                    <li><a href="#"><p>예약조회</p></a></li>
+                    <li><a href="#"><p>오시는길</p></a></li>
+                    <li><a href="#"><p>즐겨찾기</p></a></li>
                 </ul>
             </article>
         </div>
