--- a/B-2/index.html
+++ b/B-2/index.html
@@ -103,20 +103,17 @@
                 <ul>
                     <li>
                         <a href="#">
-                            <p><img src="img/icon01.png" alt="예약조회"></p>
-                            <span>예약조회</span>
+                            <p>예약조회</p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <p><img src="img/icon02.png" alt="렌터카"></p>
-                            <span>렌터카</span>
+                            <p>렌터카</p>
                         </a>
                     </li>
                     <li>
                         <a href="#">
-                            <p><img src="img/icon03.png" alt="즐겨찾기"></p>
-                            <span>즐겨찾기</span>
+                            <p>즐겨찾기</p>
                         </a>
                     </li>
                 </ul>
@@ -125,9 +122,9 @@
         <footer>
             <div class="inner">
                 <ul class="fsns">
-                    <li><a href="#"><img src="img/sns1.png" alt="네이버블로그"></a></li>
-                    <li><a href="#"><img src="img/sns2.png" alt="페이스북"></a></li>
-                    <li><a href="#"><img src="img/sns3.png" alt="유튜브"></a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">NaverBlog</a></li>
+                    <li><a href="#">Youtube</a></li>
                 </ul>
                 <select>
                     <option>페밀리 사이트</option>
