--- a/C-1/index.html
+++ b/C-1/index.html
@@ -70,7 +70,7 @@
                 </ul>
             </section>
             <div class="con">
-                <article class="con1">
+                <article class="contents">
                     <ul class="tabmenu">
                         <li class="on"><h2><a href="#">공지사항</a></h2>
                             <div class="notice tabcon">
@@ -105,7 +105,7 @@
                         </li>
                     </ul>
                 </article>
-                <article class="con2">
+                <article class="banner">
                     <h2>배너</h2>
                     <a href="#">
                         <div>
@@ -114,24 +114,21 @@
                         </div>
                     </a>
                 </article>
-                <article class="con3">
+                <article class="go">
                     <h2>바로가기</h2>
                     <ul>
                         <li>
                             <a href="#">
-                                <span><img src="img/icon01.png" alt="축제날짜"></span>
                                 <p>축제날짜</p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span><img src="img/icon02.png" alt="오시는길"></span>
                                 <p>오시는길</p>
                             </a>
                         </li>
                         <li>
                             <a href="#">
-                                <span><img src="img/icon03.png" alt="즐겨찾기"></span>
                                 <p>즐겨찾기</p>
                             </a>
                         </li>
