--- a/F-2/index.html
+++ b/F-2/index.html
@@ -191,9 +191,9 @@
         <footer>
             <div>
                 <ul class="sns">
-                    <li><a href="#"><img src="img/sns1.png" alt="네이버"></a></li>
-                    <li><a href="#"><img src="img/sns2.png" alt="페이스북"></a></li>
-                    <li><a href="#"><img src="img/sns3.png" alt="유튜브"></a></li>
+                    <li><a href="#">Naver</a></li>
+                    <li><a href="#">Facebook</a></li>
+                    <li><a href="#">Youtube</a></li>
                 </ul>
                 <select>
                     <option>Family Site</option>
