--- a/D-2/index.html
+++ b/D-2/index.html
@@ -49,7 +49,7 @@
                 </nav>
             </header>
             <div class="contents">
-                <div class="con1">
+                <div class="con">
                     <div class="slide">
                         <ul>
                             <li class="s1">
@@ -87,7 +87,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="con2">
+                <div class="tabcon">
                     <article class="notice">
                         <h2>공지사항</h2>
                         <table>
