--- a/A-1 연습/index.html
+++ b/A-1 연습/index.html
@@ -143,12 +143,11 @@
             </div>
             <footer>
                 <p class="flogo"><a href="#"><img src="img/flogo.png" alt="JUST 쇼핑몰"></a></p>
-                <p class="fsns">
-                    <ul>
+                <ul class="fsns">
                         <li><a href="#">Facebook</a></li>
                         <li><a href="#">NaverBlog</a></li>
                         <li><a href="#">Youtube</a></li>
-                    </ul>
+                </ul>
                     <p class="fcopy">
                         It is a long established fact that a reader will be distracted. <br>
                         Copyright 2024. leeminiclass All rights reserved.
