--- a/A-1/index.html
+++ b/A-1/index.html
@@ -50,8 +50,8 @@
                     </ul>
                 </nav>
             </header>
-            <div class="slide">
-                <section class="slides">
+            <div class="cont">
+                <section class="slide">
                     <ul>
                         <li class="s1">
                             <a href="#">
