--- a/D-1 연습/index.html
+++ b/D-1 연습/index.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>조이컨트리클럽</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="script/jquery-1.12.3.js"></script>
-    <script src="script/script.js"></script>
+    <title>Document</title>
 </head>
 <body>
-   
+    
 </body>
 </html>
