--- a/D-1 연습/index.html
+++ b/D-1 연습/index.html
@@ -119,7 +119,7 @@
                                 </table>
                             </div>
                         </li>
-                        <li class="on"><h2><a href="#">갤러리</a></h2>
+                        <li><h2><a href="#">갤러리</a></h2>
                             <div class="gall tabcon">
                                 <ul>
                                     <li>
