--- a/C-1/index.html
+++ b/C-1/index.html
@@ -152,7 +152,7 @@
         </div>
         <div class="popup">
             <h2>Again, 해운대 빛의 바다</h2>
-            <p class="text">Again, 해둔대 빛의 바다축제가 시작됩니다!</p>
+            <p class="text">Again, 해운대 빛의 바다축제가 시작됩니다!</p>
             <p class="close"><button>X 닫기</button></p>
         </div>
     </div>
