--- a/F-1연습/index.html
+++ b/F-1연습/index.html
@@ -140,7 +140,7 @@
                         </div>
                     </li>
                     <li><a href="#">갤러리</a></li>
-                    <div class="gall notice">
+                    <div class="gall tabcon">
                         <ul>
                             <li>
                                 <a href="#">
